Saved CSS Design

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <title>Inojales_Anesia_Mae_Act_Project</title>
- 
+ <link rel="stylesheet" href="style.css">
   <head>
     <body>
         <h1>College of Computer Studies</h1>
         <h2>BSIT-3 BLOCK-3</h2>
         <hr>
-
+       
+     <div id="con">
           <div>
             <p>BIODATA</p>
             <p>Name: Anesia Mae Inojales</p>
