Add Profile Picture

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <hr>
        
      <div id="con">
+
+          <div id="img-con">
+            <img src="shang.jpg" alt="">
+          </div>
+
           <div>
             <p>BIODATA</p>
             <p>Name: Anesia Mae Inojales</p>
