Add Favorite Audio and Video

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
           </div>
        </div>
     
+     <div id="con">
+          <div> 
+            <p>Audio:</p>
+            <audio src="Closer.mp3" controls></audio>
+          </div>
+        
+          <div>
+            <p>Video:</p>
+            <video src="After.mp4" controls></video>
+          </div>
+       </div>
+
     </body>
   </head>
 </html>
