--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <h1>College of Computer Studies</h1>
         <h2>BSIT-3 BLOCK-3</h2>
         <hr>
-       
+
+     <p id="datetime"></p>       
+
      <div id="con">
 
           <div id="img-con">
@@ -47,3 +49,4 @@
     </body>
   </head>
 </html>
+<script src="index.js"></script>
